# unidiff-rs

./: .travis.yml  Cargo.toml  README.md
benches/: 01_simple.rs  02_read_everytime.rs
src/: lib.rs
tests/: test_hunk.rs  test_patchedfile.rs  test_patchset.rs
tests/fixtures/: renamed.diff  sample0.diff  sample4-plus.diff  sample4.diff  sample5.diff
