[package]
authors = ["messense <messense@icloud.com>"]
description = "Unified diff parsing/metadata extraction library for Rust"
documentation = "https://messense.github.io/unidiff-rs"
homepage = "https://github.com/messense/unidiff-rs"
keywords = ["diff", "git", "svn", "hg", "unified"]
license = "MIT"
name = "unidiff"
readme = "README.md"
repository = "https://github.com/messense/unidiff-rs"
version = "0.1.6"

[dependencies]
encoding = "0.2"
lazy_static = "0.2"
regex = "0.2"

[dependencies.clippy]
optional = true
version = "^0.*"

[features]
unstable = []
