[package]
authors = ["messense <messense@icloud.com>"]
description = "Unified diff parsing/metadata extraction library for Rust"
documentation = "https://messense.github.io/unidiff-rs"
homepage = "https://github.com/messense/unidiff-rs"
keywords = ["diff", "git", "svn", "hg", "unified"]
license = "MIT"
name = "unidiff"
readme = "README.md"
repository = "https://github.com/messense/unidiff-rs"
version = "0.3.2"

[dependencies]
lazy_static = "1.0"
regex = "1.0"
encoding_rs = "0.8"

[features]
unstable = []
